package org.example.structural.adapter;

public interface Payment {
    void pay(String type);
}
