package org.example.structural.adapter;

public interface Secure {
    void payWithSecureLevelA();
    void payWithSecureLevelZ();
}
