@startuml

title __ADAPTER's Class Diagram__\n

  namespace org.example {
    namespace structural.adapter {
      class org.example.structural.adapter.Adapter {
          + Adapter()
          + pay()
      }
    }
  }
  

  namespace org.example {
    namespace structural.adapter {
      class org.example.structural.adapter.BlackCreditCard {
          + payWithSecureLevelA()
          + payWithSecureLevelZ()
      }
    }
  }
  

  namespace org.example {
    namespace structural.adapter {
      class org.example.structural.adapter.CreditCard {
          + pay()
      }
    }
  }
  

  namespace org.example {
    namespace structural.adapter {
      class org.example.structural.adapter.GoldCreditCard {
          + payWithSecureLevelA()
          + payWithSecureLevelZ()
      }
    }
  }
  

  namespace org.example {
    namespace structural.adapter {
      interface org.example.structural.adapter.Payment {
          {abstract} + pay()
      }
    }
  }
  

  namespace org.example {
    namespace structural.adapter {
      interface org.example.structural.adapter.Secure {
          {abstract} + payWithSecureLevelA()
          {abstract} + payWithSecureLevelZ()
      }
    }
  }
  

  org.example.structural.adapter.Adapter .up.|> org.example.structural.adapter.Payment
  org.example.structural.adapter.Adapter o-- org.example.structural.adapter.Secure : secureCreditCard
  org.example.structural.adapter.BlackCreditCard .up.|> org.example.structural.adapter.Secure
  org.example.structural.adapter.CreditCard .up.|> org.example.structural.adapter.Payment
  org.example.structural.adapter.CreditCard o-- org.example.structural.adapter.Adapter : adapter
  org.example.structural.adapter.GoldCreditCard .up.|> org.example.structural.adapter.Secure


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
